fix slider bug on mobile

--- a/css/header.css
+++ b/css/header.css
@@ -114,7 +114,6 @@ header {
     opacity: 1;
     max-height: 500px;
     padding-top: 15px;
-    padding-bottom: 25px;
 }
 .hamburger-menu__search {
     display: block;
