--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
     max-width: 100vw;
     aspect-ratio: 16 / 9;
     transition: margin-top 0.1s linear;
+    flex-shrink: 0;
+    margin-top: 55px;
 }
 .slider__img {
     position: absolute;
@@ -27,7 +29,6 @@
     height: 100%;
     object-fit: cover;
     transition: transform 0.45s linear;
-    margin-top: 55px;
 }
 .slider__back-btn, .slider__forward-btn {
     position: absolute;
